<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        style="@style/tv_method_des_style"
        android:text="@string/method_des_first" />

    <Button
        android:id="@+id/btn_method_first"
        style="@style/btn_method_style"
        android:text="方法一" />

    <TextView
        style="@style/tv_method_des_style"
        android:text="@string/method_des_second" />

    <Button
        android:id="@+id/btn_method_second"
        style="@style/btn_method_style"
        android:text="方法二" />

    <TextView
        style="@style/tv_method_des_style"
        android:text="@string/method_des_third" />

    <Button
        android:id="@+id/btn_method_third"
        style="@style/btn_method_style"
        android:text="方法三" />

    <TextView
        style="@style/tv_method_des_style"
        android:text="@string/method_des_fourth" />

    <Button
        android:id="@+id/btn_method_fourth"
        style="@style/btn_method_style"
        android:text="方法四" />

    <TextView
        style="@style/tv_method_des_style"
        android:text="@string/method_des_fifth" />

    <Button
        android:id="@+id/btn_method_fifth"
        style="@style/btn_method_style"
        android:text="方法五" />

</LinearLayout>